Modular monolith - project module